--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </button>
             </div>
         </div>
-        <img src="./portfolio.jpeg" alt="Portfolio Image" class="img-fluid rounded-circle" id="portfolio-image" />
+        <img src="PORTFOLIO2/portfolio.jpeg" alt="Portfolio Image" class="img-fluid rounded-circle" id="portfolio-image" />
     </section>
 
     <!-- Skills Section -->
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-md-4 projects">
                     <div class="project-item">
-                        <img src="./calculator.png" alt="Calculator Project" class="img-fluid" />
+                        <img src="PORTFOLIO2/calculator.png" alt="Calculator Project" class="img-fluid" />
                         <h3>Calculator</h3>
                         <p>
                             A simple yet functional calculator built with JavaScript. This project demonstrates basic arithmetic operations and user interaction, providing a clean and intuitive interface for users to perform calculations efficiently.
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-4 projects">
                     <div class="project-item">
-                        <img src="./to_do.png" alt="TO-DO List Project" class="img-fluid" />
+                        <img src="PORTFOLIO2/to_do.png" alt="TO-DO List Project" class="img-fluid" />
                         <h3>TO-DO List Website</h3>
                         <p>
                             A dynamic TO-DO list application that allows users to manage tasks effectively. With features such as adding, editing, and deleting tasks, this project showcases my skills in creating interactive and user-friendly interfaces.
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-4 projects">
                     <div class="project-item">
-                        <img src="./newsletter.png" alt="Newsletter Project" class="img-fluid" />
+                        <img src="PORTFOLIO2/newsletter.png" alt="Newsletter Project" class="img-fluid" />
                         <h3>Newsletter Website</h3>
                         <p>
                             A well-designed newsletter subscription platform. This project demonstrates my ability to create responsive and visually appealing web forms, integrating subscription functionalities and ensuring a seamless user experience.
@@ -107,19 +107,19 @@
             <p>Contact me through the following platforms:</p>
             <div class="contact-buttons">
                 <a class="btn" href="mailto:your_email@example.com" aria-label="Email">
-                    <img src="./gmail.png" alt="Gmail" class="img-fluid rounded-circle" />
+                    <img src="PORTFOLIO2/gmail.png" alt="Gmail" class="img-fluid rounded-circle" />
                 </a>
                 <a class="btn" href="https://www.linkedin.com/in/your-profile" aria-label="LinkedIn">
-                    <img src="./linkdn.png" alt="LinkedIn" class="img-fluid rounded-circle" />
+                    <img src="PORTFOLIO2/linkdn.png" alt="LinkedIn" class="img-fluid rounded-circle" />
                 </a>
                 <a class="btn" href="https://github.com/your-profile" aria-label="GitHub">
-                    <img src="./github.png" alt="GitHub" class="img-fluid rounded-circle" />
+                    <img src="PORTFOLIO2/github.png" alt="GitHub" class="img-fluid rounded-circle" />
                 </a>
                 <a class="btn" href="https://twitter.com/your-profile" aria-label="Twitter">
-                    <img src="./twitter.png" alt="Twitter" class="img-fluid rounded-circle" />
+                    <img src="PORTFOLIO2/twitter.png" alt="Twitter" class="img-fluid rounded-circle" />
                 </a>
                 <a class="btn" href="https://instagram.com/your-profile" aria-label="Instagram">
-                    <img src="./insta.jpeg" alt="Instagram" class="img-fluid rounded-circle" />
+                    <img src="PORTFOLIO2/insta.jpeg" alt="Instagram" class="img-fluid rounded-circle" />
                 </a>
             </div>
             <footer class="text-center bg-dark text-white py-3 mt-4">
